src/test/deca/context/valid/class/1_sousClass.deca
/* Description:
     tester class qui herite d'autre class

    Historique:
      cree le 08/01/2020
*/

   class A {


   }

   class B extends A {
   
   }
